# mpiex

./: .gitignore  CMakeLists.txt  README.pod
include/: mpiex.h
include/mpiex/: __shared_count.h  communicator.h  future.h  operations.h  traits.h  type_traits.h
src/: __shared_count.cc  future.cc
tests/: mpi_catch.h  mpi_example2.t.cpp  test_3rdparty.cc  test_value_type.cc
